objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>Deal Registration Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Recruitment</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Approved</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted</fullName>
            <default>true</default>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Sales Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Converted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Working</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Add_to_Nurture_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the Lead Path for unqualified leads who will continue to be marketed to.  Not currently associated to any process or trigger.</description>
        <label>Add to Nurture Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Mapped__c</fullName>
        <formula>HYPERLINK(&quot;http://maps.google.com?q=&quot; &amp; Street &amp; &quot;%20&quot; &amp; City &amp; &quot;%20&quot; &amp; State &amp; &quot;%20&quot; &amp; PostalCode,IMAGE(&quot;/servlet/servlet.FileDownload?file=015Hr000003iK9m&quot;, &quot;Map Address in Google&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Address in Google Maps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Family_Members_Data__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.FamilyMembers}</formula>
        <label>Number Business Family Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competition_Battlecard__c</fullName>
        <label>Competition Battlecard</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Competitor 1</fullName>
                </value>
                <value>
                    <fullName>Competitor 2</fullName>
                </value>
                <value>
                    <fullName>Competitor 3</fullName>
                </value>
                <value>
                    <fullName>Competitor 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConvertedDate__c</fullName>
        <label>Converted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Month__c</fullName>
        <formula>CASE( MONTH(ConvertedDate) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Month__c</fullName>
        <formula>CASE( MONTH( Created_Date_without_Time__c  ) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Created_Date_without_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Days__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Days</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Data_com_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this lead was generated from the Data.com Web-to-Lead form, and is used by workflow to change the lead to the Data.com Record Type.</description>
        <label>Data.com Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Converted__c</fullName>
        <formula>ConvertedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Converted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Last_Activity__c</fullName>
        <formula>LastActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Last Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Remaining__c</fullName>
        <label>Days Remaining</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Activity__c</fullName>
        <formula>IF(ISNULL(LastActivityDate)=false, TODAY() - LastActivityDate, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Last Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal_Approved_Date__c</fullName>
        <description>Stored the date the deal registraion was approved (via field updates) and is used in lead conversion so the opportunity has the date the deal was registered and can be used to count when the deal expires</description>
        <label>Deal Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Timeframe__c</fullName>
        <label>Decision Timeframe</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediately</fullName>
                </value>
                <value>
                    <fullName>1-3 Months</fullName>
                </value>
                <value>
                    <fullName>3-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>Next Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delinquency_Risk_Data__c</fullName>
        <formula>ENCODED:[treatNullAsNull]IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;L&quot;), &quot;Low Risk of Delinquency&quot;, 
IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;M&quot;), &quot;Medium Risk of Delinquency&quot;, 
IF(ISPICKVAL({!ID:DandbCompany.MarketingPreScreen}, &quot;H&quot;), &quot;High Risk of Delinquency&quot;, 
&quot;&quot;)))</formula>
        <label>D&amp;B Delinquency Risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discovery_Explanation__c</fullName>
        <label>Discovery_Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discovery_Outcome2__c</fullName>
        <label>Discovery_Outcome2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discovery_Prescription__c</fullName>
        <label>Discovery_Prescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Disqual_Reason__c</fullName>
        <label>Disqual/Archive Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>No Budget</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>No Decision</fullName>
                </value>
                <value>
                    <fullName>No Power</fullName>
                </value>
                <value>
                    <fullName>Lack of Vision</fullName>
                </value>
                <value>
                    <fullName>Never Reached</fullName>
                </value>
                <value>
                    <fullName>Wrong Information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>This is used to consistently import data to a version of the SDO and translate data into other languages.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Facebook_Persona_ID__c</fullName>
        <label>Facebook Persona ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indicator_1_Positive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einstein - Indicator 1 Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Know_Decision_Maker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Decision Maker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_days__c</fullName>
        <formula>ROUND(NOW()- LastModifiedDate , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Age_days__c</fullName>
        <formula>ROUND(NOW()-CreatedDate, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Age (days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Number__c</fullName>
        <description>Used by the Round Robin assignment process.</description>
        <displayFormat>{000000}</displayFormat>
        <label>Lead Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Lead_Quality__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Lead_Total__c &gt; 0, &apos;015Hr000003iK9v&apos;, &apos;015Hr000003iK9w&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Lead_Total__c &gt; 5, &apos;015Hr000003iK9v&apos;, &apos;015Hr000003iK9w&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp;
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Lead_Total__c &gt; 10, &apos;015Hr000003iK9v&apos;, &apos;015Hr000003iK9w&apos;),&apos;&apos;,24,22) &amp;&quot;&quot;&amp; 
IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; IF (Lead_Total__c &gt; 15, &apos;015Hr000003iK9v&apos;, &apos;015Hr000003iK9w&apos;),&apos;&apos;,24,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Quality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Rank__c</fullName>
        <formula>IF( (  Lead_Total__c  &gt;11),&quot;High&quot;, IF(AND( Lead_Total__c  &lt;11, Lead_Total__c  &gt; 5),&quot;Medium&quot;, &quot;Low&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Rank</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score_Value__c</fullName>
        <description>Provides numeric value for Lead_Score__c, which simulates Einstein predictive lead scoring for demos.</description>
        <label>Lead Score Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>IF(AND(Lead_Score_Value__c &lt;=100, Lead_Score_Value__c &gt;60), 
TEXT(Lead_Score_Value__c) &amp; &quot; &quot; &amp; IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.FileDownload?file=015Hr000003iKAA&amp;oid=&quot;&amp;$Organization.Id, &quot;Green&quot;), 

IF(AND(Lead_Score_Value__c &lt;=60, Lead_Score_Value__c &gt; 30), 
TEXT(Lead_Score_Value__c)&amp; &quot; &quot; &amp; IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.FileDownload?file=015Hr000003iKAB&amp;oid=&quot;&amp;$Organization.Id, &quot;Yellow&quot;), 

IF(Lead_Score_Value__c &lt;=30, 
TEXT(Lead_Score_Value__c)&amp; &quot; &quot; &amp; IMAGE(URLsrc__c&amp;&quot;/servlet/servlet.FileDownload?file=015Hr000003iKAC&amp;oid=&quot;&amp;$Organization.Id, &quot;Red&quot;), &quot;0&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Total__c</fullName>
        <formula>Score1__c + Score2__c  +Score3__c + Score4__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>13</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Channel_Program__c</fullName>
        <label>Channel Program Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Geo_Preference__c</fullName>
        <label>Geographic Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>United States</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Asia</fullName>
                </value>
                <value>
                    <fullName>Europe/Middle East</fullName>
                </value>
                <value>
                    <fullName>South America</fullName>
                </value>
                <value>
                    <fullName>Mexico/Central America</fullName>
                </value>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Interest__c</fullName>
        <label>Business Experience / Interest</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Partner_Type__c</fullName>
        <label>Dealer/Distributor Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agricultural Equipment Dealer</fullName>
                </value>
                <value>
                    <fullName>Construction Equipment Dealer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MFG_Discrete_Partners_Specific_Geo__c</fullName>
        <label>Specific Geographic Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Data__c</fullName>
        <formula>ENCODED:{!ID:DandbCompany.FipsMsaDesc}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Promo__c</fullName>
        <label>Marketing Promo</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Code_Data__c</fullName>
        <formula>ENCODED:{!ID:DandbCompany.PrimaryNaics}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAICS Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description_Data__c</fullName>
        <formula>ENCODED:{!ID:DandbCompany.PrimaryNaicsDesc}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NAICS Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Playbook_Type__c</fullName>
        <label>Playbook Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Playbook 1</fullName>
                </value>
                <value>
                    <fullName>Playbook 2</fullName>
                </value>
                <value>
                    <fullName>Playbook 3</fullName>
                </value>
                <value>
                    <fullName>Playbook 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( Rating,
&quot;Hot&quot;, &quot;015Hr000003iKAA&amp;oid=&quot;&amp;$Organization.Id,
&quot;Warm&quot;, &quot;015Hr000003iKAB&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cool&quot;, &quot;015Hr000003iKAC&amp;oid=&quot;&amp;$Organization.Id,
&quot;015Hr000003iKAC&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Interest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Amount__c</fullName>
        <label>Project Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Budget_Amount__c</fullName>
        <label>Project Budget Amount</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Defined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Project Defined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualification_Notes__c</fullName>
        <label>Qualification Notes</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RatingColor__c</fullName>
        <formula>CASE(Rating, 
&quot;Hot&quot;, &quot;color:red&quot;, 
&quot;Warm&quot;, &quot;color:orange&quot;, 
&quot;Cold&quot;, &quot;color:blue&quot;, 
&quot;color:blue&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Expiration__c</fullName>
        <description>Used for deal registration</description>
        <label>Registration Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Create_Month__c</fullName>
        <formula>CASE( MONTH(Reported_Create_Month_del__c ) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Create Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Convert_Date__c</fullName>
        <label>Reported Convert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reported_Converted__c</fullName>
        <formula>CASE( MONTH(Reported_Convert_Date__c ) , 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reported Converted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Create_Month_del__c</fullName>
        <label>Reported Create Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Roof_Type__c</fullName>
        <description>Used by the Einstein Vision Demo added June 2017.</description>
        <inlineHelpText>This field will change automatically when you click the &quot;Find House&quot; button.  Set to &quot;Unknown&quot; to reset demo.</inlineHelpText>
        <label>Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Pitched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RoundRobin__c</fullName>
        <formula>CASE(MOD(VALUE( Lead_Number__c ),3),0,&quot;General Queue&quot;, 1, &quot;International Queue&quot;, 2, &quot;Target Campaign&quot;,&quot;Invalid ID&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Round Robin ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Code_Data__c</fullName>
        <formula>ENCODED:{!ID:DandbCompany.PrimarySic}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description_Data__c</fullName>
        <formula>ENCODED:{!ID:DandbCompany.PrimarySicDesc}</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIC Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Playbooks__c</fullName>
        <label>Sales Playbook</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Score1__c</fullName>
        <formula>IF ( Know_Decision_Maker__c ,5,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score2__c</fullName>
        <formula>CASE(Decision_Timeframe__c  ,&quot;Immediately&quot;, 5, &quot;1-3 Months&quot;,4,&quot;3-6 Months&quot;, 3, &quot;6-12 Months&quot;, 2, &quot;Next Year&quot;, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Timeframe Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score3__c</fullName>
        <formula>IF( Project_Defined__c = True, 5, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Defined Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shadow_Roof_Type__c</fullName>
        <description>Used by the Einstein Vision Demo added June 2017</description>
        <inlineHelpText>Determines which image shows when you click the &quot;Find House&quot; button.  These are static resources called &quot;RooftopFlat&quot; and &quot;RooftopPitched&quot;.</inlineHelpText>
        <label>Shadow Roof Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flat</fullName>
                </value>
                <value>
                    <fullName>Pitched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SlickSidebar_Tab_Name__c</fullName>
        <formula>FirstName &amp; &apos; &apos; &amp; LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SlickSidebar Tab Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <formula>IMAGE( URLsrc__c&amp;&quot;/servlet/servlet.ImageServer?id=&quot;&amp;CASE( LeadSource, 
&quot;Website&quot;,&quot;015Hr000003iKAD&amp;oid=&quot;&amp;$Organization.Id,
&quot;Social Media&quot;,&quot;015Hr000003iKAE&amp;oid=&quot;&amp;$Organization.Id,
&quot;Marketing Event&quot;, &quot;015Hr000003iKAF&amp;oid=&quot;&amp;$Organization.Id,
&quot;Referral&quot;,&quot;015Hr000003iKAG&amp;oid=&quot;&amp;$Organization.Id,
&quot;Cold Call&quot;,&quot;015Hr000003iKAH&amp;oid=&quot;&amp;$Organization.Id,
&quot;Data.com&quot;, &quot;015Hr000003iKAI&amp;oid=&quot;&amp;$Organization.Id,
&quot;Community&quot;, &quot;015Hr000003iKAJ&amp;oid=&quot;&amp;$Organization.Id,
&quot;Inbound Call&quot;,&quot;015Hr000003iKAK&amp;oid=&quot;&amp;$Organization.Id,
&quot;Partner&quot;,&quot;015Hr000003iKAL&amp;oid=&quot;&amp;$Organization.Id,
&quot;015Hr000003iKAD&amp;oid=&quot;&amp;$Organization.Id),&quot;&quot;,22,22)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <formula>ENCODED:[treatNullAsNull]{!ID:DandbCompany.StockSymbol}</formula>
        <label>Ticker Symbol</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Predictive_Result_1__c</fullName>
        <label>Einstein - Top Predictive Result 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trade_Show_Invite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trade Show Invite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter_Persona_ID__c</fullName>
        <label>Twitter Persona ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URLsrc__c</fullName>
        <description>This field is to ensure that icons show up properly in Communities.</description>
        <formula>IF(CONTAINS($Api.Enterprise_Server_URL_290,&quot;.force.com&quot;),
MID( $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0)),
FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))+1) - FIND(&quot;/&quot;, $Api.Enterprise_Server_URL_290, FIND(&quot;.force.com/&quot;, $Api.Enterprise_Server_URL_290, 0))
) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URLsrc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>escore__c</fullName>
        <label>Einstein - Lead Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>55</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>85</fullName>
                </value>
                <value>
                    <fullName>92</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__HasOptedOutOfMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mobile Opt Out</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>